--- a/env/prod/docker-compose.yaml
+++ b/env/prod/docker-compose.yaml
@@ -230,8 +230,9 @@ services:
     image: grafana/grafana
     container_name: grafana
     volumes:
-      - grafana_data:/var/lib/grafana
+#      - grafana_data:/var/lib/grafana
       - ../../metrics/grafana/provisioning:/etc/grafana/provisioning
+    user: '104'
     environment:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD}
