--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -3,10 +3,17 @@ events {
   worker_connections 768;
 }
 
+
+
 http {
 # upstream main {
 #    server main:5000;
 #  }
+
+  map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+  }
 
   sendfile on;
   tcp_nopush on;
@@ -39,6 +46,19 @@ server {
     gzip_types    text/plain application/javascript application/x-javascript text/javascript text/xml text/css;
     gzip_min_length 1000;
     try_files $uri $uri/ /index.html;
+  }
+
+  location /monitoring/prometheus/ {
+    proxy_pass http://caddy:9090;
+  }
+
+  location /monitoring/grafana/ {
+    rewrite  ^/monitoring/grafana/(.*)  /$1 break;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
+    proxy_set_header Host $http_host;
+    proxy_pass http://caddy:3000;
   }
 
   location /api {
