--- a/metrics/prometheus/prometheus.yml
+++ b/metrics/prometheus/prometheus.yml
@@ -58,11 +58,11 @@ scrape_configs:
     static_configs:
       - targets: [ 'cadvisor:8080' ]
 
-  - job_name: 'prometheus'
-    scrape_interval: 10s
-    static_configs:
-      - targets: [ 'localhost:9090' ]
-
+  #  - job_name: 'prometheus'
+  #    scrape_interval: 10s
+  #    static_configs:
+  #      - targets: [ 'prometheus:9090' ]
+  #
   - job_name: 'pushgateway'
     scrape_interval: 10s
     honor_labels: true
