--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -110,5 +110,18 @@ server {
       proxy_pass http://wave_music:5000/docs/;
   }
 
+    location /monitoring/prometheus/ {
+      proxy_pass http://caddy:9090;
+    }
+
+    location /monitoring/grafana/ {
+      rewrite  ^/monitoring/grafana/(.*)  /$1 break;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+      proxy_set_header Host $http_host;
+      proxy_pass http://caddy:3000;
+    }
+
 }
 }
