--- a/metrics/prometheus/prometheus.yml
+++ b/metrics/prometheus/prometheus.yml
@@ -74,6 +74,12 @@ scrape_configs:
     static_configs:
       - targets: [ 'postgres-exporter:9187' ]
 
+  - job_name: 'nginx'
+    scrape_interval: 10s
+    metrics_path: '/metrics'
+    static_configs:
+      - targets: [ 'nginx-exporter:9113' ]
+
   - job_name: 'redis'
     scrape_interval: 10s
     static_configs:
