--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -14,9 +14,8 @@ services:
     working_dir: /var/www/wave/
     volumes:
       - ../../assets:/var/www/wave/assets
-      - ../../config/nginx/nginx.prod.conf:/etc/nginx/nginx.conf:ro
+      - ../../config/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ../../../../front/2022_1_Wave/build:/var/www/wave
-      - ./certs:/var/www/certs
     depends_on:
       - wave_music
 
