--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -8,6 +8,11 @@ http {
 #    server main:5000;
 #  }
 
+  map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+  }
+
   sendfile on;
   tcp_nopush on;
   types_hash_max_size 2048;
@@ -48,6 +53,23 @@ server {
   location ^~ /docs/ {
       index index.html;
       proxy_pass http://wave_music:5000/docs/;
+  }
+
+  location /monitoring/prometheus/ {
+    proxy_pass http://caddy:9090;
+  }
+
+  location /monitoring/grafana/ {
+    rewrite  ^/monitoring/grafana/(.*)  /$1 break;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
+    proxy_set_header Host $http_host;
+    proxy_pass http://caddy:3000;
+  }
+
+  location /metrics {
+      stub_status on;
   }
 
 #   location  /pgadmin {
