--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -41,9 +41,10 @@ services:
     expose:
       - 5000
     working_dir: /var/www/service
-    entrypoint: ./prod.sh
+    entrypoint: ./cmd/api/run.sh
     volumes:
       - ../..:/var/www/service
+      - ./airs/api.toml:/var/www/service/.air.toml:ro
       - ../../config/config.toml:/var/www/service/config.toml:ro
     environment:
       - DATABASE_CONNECTION=user=postgres password=music dbname=wave host=db port=5432 sslmode=disable
@@ -64,12 +65,16 @@ services:
     working_dir: /var/www/service
     restart: always
     environment:
+      - dbType=postgres
+      - port=:8081
+      - exporterPort=:9081
       - DATABASE_CONNECTION=user=postgres password=music dbname=wave host=db port=5432 sslmode=disable
     expose:
       - 8081
       - 9081
     entrypoint: ./cmd/album/run.sh
     volumes:
+      - ./airs/album.toml:/var/www/service/.air.toml:ro
       - ../..:/var/www/service
 
   artist:
@@ -78,12 +83,16 @@ services:
     working_dir: /var/www/service
     restart: always
     environment:
+      - dbType=postgres
+      - port=:8082
+      - exporterPort=:9082
       - DATABASE_CONNECTION=user=postgres password=music dbname=wave host=db port=5432 sslmode=disable
     expose:
       - 8082
       - 9082
     entrypoint: ./cmd/artist/run.sh
     volumes:
+      - ./airs/artist.toml:/var/www/service/.air.toml:ro
       - ../..:/var/www/service
 
   track:
@@ -92,12 +101,16 @@ services:
     working_dir: /var/www/service
     restart: always
     environment:
+      - dbType=postgres
+      - port=:8083
+      - exporterPort=:9083
       - DATABASE_CONNECTION=user=postgres password=music dbname=wave host=db port=5432 sslmode=disable
     expose:
       - 8083
       - 9083
     entrypoint: ./cmd/track/run.sh
     volumes:
+      - ./airs/track.toml:/var/www/service/.air.toml:ro
       - ../..:/var/www/service
 
   playlist:
@@ -106,12 +119,16 @@ services:
     working_dir: /var/www/service
     restart: always
     environment:
+      - dbType=postgres
+      - port=:8084
+      - exporterPort=:9084
       - DATABASE_CONNECTION=user=postgres password=music dbname=wave host=db port=5432 sslmode=disable
     expose:
       - 8084
       - 9084
     entrypoint: ./cmd/playlist/run.sh
     volumes:
+      - ./airs/playlist.toml:/var/www/service/.air.toml:ro
       - ../..:/var/www/service
 
   auth:
@@ -120,12 +137,16 @@ services:
     working_dir: /var/www/service
     restart: always
     environment:
+      - dbType=redis
+      - port=:8085
+      - exporterPort=:9085
       - DATABASE_CONNECTION=user=postgres password=music dbname=wave host=db port=5432 sslmode=disable
     expose:
       - 8085
       - 9085
     entrypoint: ./cmd/auth/run.sh
     volumes:
+      - ./airs/auth.toml:/var/www/service/.air.toml:ro
       - ../..:/var/www/service
 
   user:
@@ -134,12 +155,16 @@ services:
     working_dir: /var/www/service
     restart: always
     environment:
+      - dbType=postgres
+      - port=:8086
+      - exporterPort=:9086
       - DATABASE_CONNECTION=user=postgres password=music dbname=wave host=db port=5432 sslmode=disable
     expose:
       - 8086
       - 9086
     entrypoint: ./cmd/user/run.sh
     volumes:
+      - ./airs/user.toml:/var/www/service/.air.toml:ro
       - ../..:/var/www/service
 
   redis:
@@ -289,8 +314,6 @@ services:
       - "9090"
       - "9113"
     ports:
-      #      - "3000:3000"
-      #      - "9090:9090"
       - "9093:9093"
       - "9091:9091"
       - "9121:9121"
