WV-73: редирект на https

--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -36,6 +36,8 @@ server {
   root /var/www/wave;
   listen 80;
 
+  server_name wave-music.online www.wave-music.online
+  return 301 https://wave-music.online$request_uri
   #server_name wave.com www.wave.com;
 
 
@@ -79,7 +81,7 @@ server {
 server {
   root /var/www/wave;
   listen 443 ssl default_server;
-
+  server_name wave-music.online www.wave-music.online
   #server_name wave.com www.wave.com;
   ssl_session_cache   shared:SSL:2m;
   ssl_session_timeout 6h;
