--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,8 +10,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      #      - uses: actions/checkout@v1
+      - uses: actions/checkout@v1
       - name: Login to DockerHub Registry
-        run: ls .
-#      - name: Deploy all Docker images
-#        run: cd deploy && bash deployAll.sh
+        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+      - name: Deploy all Docker images
+        run: cd deploy && bash deployAll.sh
