--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,5 +13,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-      - name: Deploy all Docker images
-        run: cd deploy && bash deployAll.sh
+      - name: Build all Docker images
+        run: cd deploy && bash buildDockerAll.sh
+      - name: Push all Docker images
+        run: cd deploy && bash pushDockerAll.sh
