WV-76: added Go linters for each push

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,11 +1,12 @@
 name: golangci-lint
-on:
-  push:
-    tags:
-      - v*
-    branches:
-      - master
-      - main
+#on:
+#  push:
+#    tags:
+#      - v*
+#    branches:
+#      - master
+on: [ push ]
+  #      - main
   pull_request:
 permissions:
   contents: read
