WV-76: added Go linters for each push

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -5,13 +5,13 @@ name: golangci-lint
 #      - v*
 #    branches:
 #      - master
+#      - main
+#  pull_request:
+#permissions:
+#  contents: read
+#  # Optional: allow read access to pull request. Use with `only-new-issues` option.
+#  # pull-requests: read
 on: [ push ]
-  #      - main
-  pull_request:
-permissions:
-  contents: read
-  # Optional: allow read access to pull request. Use with `only-new-issues` option.
-  # pull-requests: read
 jobs:
   golangci:
     name: lint
