WV-76: added workflows dependencies

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,10 @@
 name: Docker Build
 
-on: [ push ]
-#  push:
+on:
+  workflow_run:
+    workflows: [ "Golangci-lint" ]
+    types:
+      - completed
 #    branches: [ master ]
 #  pull_request:
 #    branches: [ master ]
