--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -19,15 +19,22 @@ jobs:
     steps:
       - uses: actions/setup-go@v3
         with:
-          go-version: 1.17
+          go-version: 1.18
       - uses: actions/checkout@v3
+      - run: apt update
+      - run: apt install -y protobuf-compiler
+      - run: apt install -y golang-goprotobuf-dev
+      - run: go install github.com/swaggo/swag/cmd/swag@latest
+      - run: go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+      - run: go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+      - run: go install github.com/favadi/protoc-go-inject-tag@latest
       - name: generate gRPC and docs
         run: chmod +x generateAll.sh && ./generateAll.sh
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
-          version: v1.29
+          version: latest
 
           # Optional: working directory, useful for monorepos
           # working-directory: somedir
