--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -21,9 +21,9 @@ jobs:
         with:
           go-version: 1.18
       - uses: actions/checkout@v3
-      - run: apt update
-      - run: apt install -y protobuf-compiler
-      - run: apt install -y golang-goprotobuf-dev
+      - run: apt-get update
+      - run: apt-get install -y protobuf-compiler
+      - run: apt-get install -y golang-goprotobuf-dev
       - run: go install github.com/swaggo/swag/cmd/swag@latest
       - run: go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
       - run: go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
