WV-77: фикс баги с grpc коннектом

--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -20,22 +20,6 @@ services:
       - wave_music
       - websocket_server
 
-  websocket_server:
-    image: mausved/wave_music_api_v1:latest
-    container_name: websocket_server
-    working_dir: /websocket-server
-    environment:
-      - REDIS_ADDR="redis:6379"
-      - AUTH_GRPC_ADDR="auth:8085"
-    expose:
-      - 6789
-    entrypoint: ./cmd/run.sh
-    volumes:
-      - ../../websocket-server:/websocket-server
-    depends_on:
-      - redis
-      - auth
-
   nginx-exporter:
     image: nginx/nginx-prometheus-exporter
     container_name: nginx-exporter
@@ -183,6 +167,22 @@ services:
     volumes:
       - ./airs/user.toml:/var/www/service/.air.toml:ro
       - ../..:/var/www/service
+
+  websocket_server:
+    image: mausved/wave_music_api_v1:latest
+    container_name: websocket_server
+    working_dir: /websocket-server
+    environment:
+      - REDIS_ADDR=redis:6379
+      - AUTH_GRPC_ADDR=auth:8085
+    expose:
+      - 6789
+    entrypoint: ./cmd/run.sh
+    volumes:
+      - ../../websocket-server:/websocket-server
+    depends_on:
+      - redis
+      - auth
 
   redis:
     image: redis
