--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -74,7 +74,7 @@ server {
       stub_status on;
   }
 
-  location /player-sync {
+  location /api/v1/player-sync {
       proxy_pass http://websocket;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
