--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,8 @@ jobs:
       - run: go install github.com/favadi/protoc-go-inject-tag@latest
       - name: generate gRPC and docs
         run: chmod +x generateAll.sh && ./generateAll.sh
+      - name: generate easyjson
+        run: chmod +x easyjsonGenerate.sh && bash ./easyjsonGenerate.sh
       - name: build
         run: go build -v ./...
       - run: go install github.com/vektra/mockery/v2@latest
