--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -30,6 +30,7 @@ jobs:
       - run: go install github.com/favadi/protoc-go-inject-tag@latest
       - name: generate gRPC and docs
         run: chmod +x generateAll.sh && ./generateAll.sh
+      - run: go install github.com/vektra/mockery/v2@latest
       - name: generate test mocks
         run: cd internal/test && bash mocks.sh
       - name: golangci-lint
